deployment/ns-backend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend-team
