deployment/ns-frontend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-team
