deployment/k8s-resource-deployer-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: k8s-resource-deployer
  name: k8s-resource-deployer
  namespace: backend-team
spec:
  containers:
  - image: faisalsoomro/k8s-resource-deployer:v1.1
    name: k8s-resource-deployer
    ports:
    - containerPort: 8080
      protocol: TCP
    resources: {}
  serviceAccountName: k8s-deployer


---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: k8s-resource-deployer
  name: k8s-resource-deployer
  namespace: frontend-team
spec:
  containers:
  - image: faisalsoomro/k8s-resource-deployer:v1.1
    name: k8s-resource-deployer
    ports:
    - containerPort: 8080
      protocol: TCP
    resources: {}
  serviceAccountName: k8s-deployer
