deployment/k8s-resource-deployer-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-resource-deployer
  name: k8s-resource-deployer
  namespace: backend-team
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: k8s-resource-deployer
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-resource-deployer
  name: k8s-resource-deployer
  namespace: frontend-team
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: k8s-resource-deployer
  type: ClusterIP
